Merge with the branch GroupsRefactoring
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/proactive/branches/ProActive_3.90@8841 28e8926c-6b08-0410-baaa-805c5e19b8d6