@@ -36,23 +36,31 @@ import java.lang.reflect.TypeVariable;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.Iterator;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
+import java.util.Queue;
 import java.util.Set;
 import java.util.Vector;
+import java.util.concurrent.CountDownLatch;
 
 import org.apache.log4j.Logger;
 import org.objectweb.proactive.Body;
 import org.objectweb.proactive.annotation.PublicAPI;
+import org.objectweb.proactive.ProActive;
 import org.objectweb.proactive.api.PAActiveObject;
-import org.objectweb.proactive.api.PAFuture;
 import org.objectweb.proactive.api.PAGroup;
+import org.objectweb.proactive.core.ProActiveRuntimeException;
 import org.objectweb.proactive.core.UniqueID;
+import org.objectweb.proactive.core.body.future.FutureProxy;
 import org.objectweb.proactive.core.body.proxy.AbstractProxy;
 import org.objectweb.proactive.core.component.ProActiveInterface;
+import org.objectweb.proactive.core.component.exceptions.ReductionException;
+import org.objectweb.proactive.core.component.type.annotations.multicast.Reduce;
+import org.objectweb.proactive.core.component.type.annotations.multicast.ReduceBehavior;
+import org.objectweb.proactive.core.component.type.annotations.multicast.ReduceMode;
 import org.objectweb.proactive.core.group.spmd.MethodCallSetSPMDGroup;
-import org.objectweb.proactive.core.group.threadpool.ThreadPool;
 import org.objectweb.proactive.core.mop.ClassNotReifiableException;
 import org.objectweb.proactive.core.mop.ConstructionOfReifiedObjectFailedException;
 import org.objectweb.proactive.core.mop.ConstructorCall;
@@ -70,6 +78,13 @@ import org.objectweb.proactive.core.util.profiling.TimerWarehouse;
 @PublicAPI
 public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.io.Serializable {
 
+    static int i = 0;
+
+    /**
+     * The name of the Class : all members of the group are "className"
+     * assignable
+     */
+    protected String className;
     /**
      * 
      */
@@ -78,34 +93,51 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
     /** The logger for the Class */
     protected static Logger logger = ProActiveLogger.getLogger(Loggers.GROUPS);
 
-    /** The name of the Class : all members of the group are "className" assignable */
-    protected String className;
-
-    /** The list of member : it contains exclusively, StubObjects connected to Proxies, or Java Objects */
+    /**
+     * The list of member : it contains exclusively, StubObjects connected to
+     * Proxies, or Java Objects
+     */
     protected Vector memberList;
 
-    /** The map : to name members of the group*/
+    /** The map : to name members of the group */
     protected Map elementNames;
 
-    /** Unique identificator for body (avoid infinite loop in some hierarchicals groups) */
+    /**
+     * Unique identificator for body (avoid infinite loop in some hierarchicals
+     * groups)
+     */
 
     // NOT FULLY IMPLEMENTED !!!
     transient protected UniqueID proxyForGroupID;
 
-    /** Number of awaited methodcall on the group's member. The Semantic is : we wait all call are done before continuing */
+    /**
+     * Number of awaited methodcall on the group's member. The Semantic is : we
+     * wait all call are done before continuing
+     */
     protected int waited = 0;
 
-    /** Flag to deternime the semantic of communication (broadcast or dispatching) */
+    /**
+     * Flag to deternime the semantic of communication (broadcast or
+     * dispatching)
+     */
     protected boolean dispatching = false;
 
-    /** Flag to deternime the semantic of communication (unique serialization of parameters or not) */
+    protected DispatchMode dispatchMode = DispatchMode.UNSPECIFIED;
+    /**
+     * Flag to deternime the semantic of communication (unique serialization of
+     * parameters or not)
+     */
     protected boolean uniqueSerialization = false;
 
     /** The stub of the typed group */
-    private StubObject stub;
+    protected StubObject stub;
 
     /** A pool of thread to serve the request */
-    transient protected ThreadPool threadpool;
+    // transient protected ExecutorService threadpool;
+    transient protected Dispatcher dispatcher;
+    int bufferSize = 1; // size of buffer of requests on server side when
+    // dynamically dispatching requests
+    transient protected TaskFactory taskFactory;
 
     /** whether to automatically remove failing elements from the group instead of throwing an exception */
     private boolean autoPurge = false;
@@ -119,8 +151,10 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
     public ProxyForGroup() throws ConstructionOfReifiedObjectFailedException {
         this.memberList = new Vector();
         this.proxyForGroupID = new UniqueID();
-        this.threadpool = new ThreadPool();
+        // this.threadpool = Executors.newCachedThreadPool();
         this.elementNames = new HashMap();
+        dispatcher = new Dispatcher(this, false, bufferSize);
+        taskFactory = TaskFactoryFactory.getTaskFactory(this);
     }
 
     public ProxyForGroup(ConstructorCall c, Object[] p) throws ConstructionOfReifiedObjectFailedException {
@@ -143,6 +177,12 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
         this.dispatching = false;
     }
 
+    protected void setBalancingMode(DispatchMode balancingMode, int bufferSize) {
+        //		dispatcher.setDynamic(true);
+        this.dispatchMode = balancingMode;
+        this.bufferSize = bufferSize;
+    }
+
     /**
      * Allows the Group to make an unique serialization of parameters.
      */
@@ -151,23 +191,29 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
     }
 
     /**
-     * Removes the ability of the Group to make an unique serialization of parameters..
+     * Removes the ability of the Group to make an unique serialization of
+     * parameters..
      */
     public void setUniqueSerializationOff() {
         this.uniqueSerialization = false;
     }
 
+    public boolean isUniqueSerializationOn() {
+        return uniqueSerialization;
+    }
+
     /**
      * Checks the semantic of communication of the Group.
+     * 
      * @return <code>true</code> if the "scatter option" is enabled.
      */
     public boolean isDispatchingOn() {
         return this.dispatching;
     }
 
-    private boolean isDispatchingCall(MethodCall mc) {
+    public boolean isDispatchingCall(MethodCall mc) {
         for (int i = 0; i < mc.getNumberOfParameter(); i++)
-            if (PAGroup.isScatterGroupOn(mc.getParameter(i))) {
+            if (ProActiveGroup.isScatterGroupOn(mc.getParameter(i))) {
                 return true;
             }
         return false;
@@ -199,15 +245,21 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
     /* ------------------------ THE PROXY'S METHOD ------------------------ */
 
     /**
-     *  The proxy's method : implements the semantic of communication. This method invokes the
-     * method call <code>mc</code> on each members of the Group.
-     * @param mc the MethodCall to apply on each member of the Group.
-     * @return the result of the call : <b> the result of a method call on a typed group is a
-     * typed group</b>.
-     * @throws InvocationTargetException if a problem occurs when invoking the method on the members of the Group
+     * The proxy's method : implements the semantic of communication. This
+     * method invokes the method call <code>mc</code> on each members of the
+     * Group.
+     * 
+     * @param mc
+     *            the MethodCall to apply on each member of the Group.
+     * @return the result of the call : <b> the result of a method call on a
+     *         typed group is a typed group</b>.
+     * @throws InvocationTargetException
+     *             if a problem occurs when invoking the method on the members
+     *             of the Group
      */
     public synchronized Object reify(MethodCall mc) throws InvocationTargetException {
-        //System.out.println("A method is called : \"" + mc.getName() + "\" on " + this.memberList.size() + " membres.");
+        // System.out.println("A method is called : \"" + mc.getName() + "\" on
+        // " + this.memberList.size() + " membres.");
         if (Profiling.TIMERS_COMPILED) {
             TimerWarehouse
                     .startXAndDisable(
@@ -225,40 +277,62 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
 
         /* if the method called is hashCode, apply it to the proxy, not to the members */
         if (("hashCode".equals(mc.getName())) && (mc.getNumberOfParameter() == 0)) {
-            return new Integer(this.hashCode());
+            return Integer.valueOf(this.hashCode());
         }
 
         if ("equals".equals(mc.getName()) && (mc.getNumberOfParameter() == 1)) {
-            return new Boolean(this.equals(mc.getParameter(0)));
+            return Boolean.valueOf(this.equals(mc.getParameter(0)));
         }
 
         // there may be some reorganization of the parameters
-        //        redistributeParameters(mc);
+        // redistributeParameters(mc);
 
-        /* result will be a stub on a proxy for group representing the group of results */
+        /*
+         * result will be a stub on a proxy for group representing the group of
+         * results
+         */
         Object result = null;
 
-        /* check if the threadpool is big enough to make the call (is there is not enough thread, create new ones) */
-        this.threadpool.checkNumberOfThreads(this.memberList.size());
-
+        /*
+         * check if the threadpool is big enough to make the call (is there is
+         * not enough thread, create new ones)
+         */
+        // this.threadpool.checkNumberOfThreads(this.memberList.size());
+        // dispatcher.checkPoolSize(memberList.size());
+        // if (doneSignal == null) {
+        // doneSignal = new CountDownLatch(memberList.size());
+        // }
         /* if OneWay : do not construct result */
         if (mc.isOneWayCall()) {
             exceptionList = new ExceptionListException();
             this.oneWayCallOnGroup(mc, exceptionList);
         }
-        /* Special case : the method returns void but is Synchronous because it throws Exception */
+        /*
+         * Special case : the method returns void but is Synchronous because it
+         * throws Exception
+         */
         else if (mc.getReifiedMethod().getReturnType() == Void.TYPE) {
             exceptionList = new ExceptionListException();
             this.oneWayCallOnGroup(mc, exceptionList);
         }
-        /* if the call is asynchronous the group of result will be a group a future */
+        /*
+         * if the call is asynchronous the group of result will be a group a
+         * future
+         */
         else { // with group in general case : SYNC == ASYNC !!!!
             result = this.asynchronousCallOnGroup(mc);
         }
 
-        /* A barrier of synchronisation to be sure that all calls are done before continuing the execution */
-        this.threadpool.complete();
-
+        /*
+         * A barrier of synchronisation to ensure that all calls are done before
+         * continuing the execution
+         */
+        // try {
+        // doneSignal.await();
+        // } catch (InterruptedException e) {
+        // throw new InvocationTargetException(e, "Group invocation failed due
+        // to a synchronization issue");
+        // }
         if (Profiling.TIMERS_COMPILED) {
             TimerWarehouse.enableAndStopX(PAActiveObject.getBodyOnThis().getID(), ((mc.isOneWayCall() || (mc
                     .getReifiedMethod().getReturnType() == Void.TYPE)) ? TimerWarehouse.GROUP_ONE_WAY_CALL
@@ -287,22 +361,27 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
         this.autoPurge = autoPurge;
     }
 
-    /** Explicit destructor : Interrupts the threads in the threadpool */
-    @Override
-    public void finalize() {
-        this.threadpool.clean();
-    }
+    // /** Explicit destructor : Interrupts the threads in the threadpool */
+    // @Override
+    // public void finalize() {
+    // // leave this task to the GC
+    // dispatcher = null;
+    // // this.threadpool.shutdownNow();
+    // }
 
     /* ------------ FOR ASYNCHRONOUS CALL ------------ */
 
     /**
-     * Creates and initializes (and returns) the group of result, then launch threads for asynchronous call of each member.
-     * @param mc the MethodCall to be applied on each member of the Group.
+     * Creates and initializes (and returns) the group of result, then launch
+     * threads for asynchronous call of each member.
+     * 
+     * @param mc
+     *            the MethodCall to be applied on each member of the Group.
      * @return the result of the call.
      */
     protected Object asynchronousCallOnGroup(MethodCall mc) throws InvocationTargetException {
         Object result;
-        Body body = PAActiveObject.getBodyOnThis();
+        Body body = ProActive.getBodyOnThis();
 
         // Creates a stub + ProxyForGroup for representing the result
         String returnTypeClassName = null;
@@ -327,134 +406,144 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
                 " : cannot create group of results");
         }
 
-        int size = this.memberList.size();
+        // data partitioning
+        List<MethodCall> methodsToDispatch = taskFactory.generateMethodCalls(mc);
+        int nbExpectedCalls = methodsToDispatch.size();
+        CountDownLatch doneSignal = new CountDownLatch(nbExpectedCalls);
+        Queue<AbstractProcessForGroup> tasksToDispatch = taskFactory.generateTasks(mc, methodsToDispatch,
+                result, null, doneSignal, this);
+        // dispatch
+        dispatcher.dispatchTasks(tasksToDispatch, doneSignal, mc.getReifiedMethod().getAnnotation(
+                Dispatch.class));
 
-        // Init the lists of result with null value to permit the "set(index)" operation
-        Vector memberListOfResultGroup = ((ProxyForGroup) ((StubObject) result).getProxy()).memberList;
-        for (int i = 0; i < size; i++) {
-            memberListOfResultGroup.add(null);
-        }
-
-        // Creating Threads
-        if (isDispatchingCall(mc) == false) {
-            if (uniqueSerialization) {
-                mc.transformEffectiveArgumentsIntoByteArray();
-            }
-            for (int index = 0; index < this.memberList.size(); index++)
-                this.threadpool.addAJob(new ProcessForAsyncCall(this, this.memberList,
-                    memberListOfResultGroup, index, mc, body));
-        } else { // isDispatchingCall == true
-            //Object[] individualEffectiveArguments = distributeParameters(mc);
-            for (int index = 0; index < memberList.size(); index++) {
-                Object[] individualEffectiveArguments = new Object[mc.getNumberOfParameter()];
-                for (int i = 0; i < mc.getNumberOfParameter(); i++)
-                    if (PAGroup.isScatterGroupOn(mc.getParameter(i))) {
-                        individualEffectiveArguments[i] = PAGroup.get(mc.getParameter(i), index %
-                            PAGroup.size(mc.getParameter(i)));
-                    } else {
-                        individualEffectiveArguments[i] = mc.getParameter(i);
-                    }
-                this.threadpool.addAJob(new ProcessForAsyncCall(this, this.memberList,
-                    memberListOfResultGroup, index,
-                    new MethodCall(mc.getReifiedMethod(), mc.getGenericTypesMapping(),
-                        individualEffectiveArguments, mc.getExceptionContext()), body));
+        // TODO rely on API or method call rather than annotation?
+        Reduce reduceAnnotation = mc.getReifiedMethod().getAnnotation(Reduce.class);
+        if (reduceAnnotation != null) {
+            try {
+                if (!ReduceMode.CUSTOM.equals(reduceAnnotation.reductionMode())) {
+                    result = reduceAnnotation.reductionMode().reduce(PAGroup.getGroup(result));
+                    //					result = reduceAnnotation.reductionMode().reduce((List<?>)result);
+                } else {
+                    ReduceBehavior reduction = (ReduceBehavior) reduceAnnotation.customReductionMode()
+                            .newInstance();
+                    result = reduction.reduce(PAGroup.getGroup(result));
+                }
+            } catch (ReductionException e) {
+                throw new InvocationTargetException(e, "cannot reduce results from group invocation");
+            } catch (InstantiationException e) {
+                throw new InvocationTargetException(e, "cannot reduce results from group invocation");
+            } catch (IllegalAccessException e) {
+                throw new InvocationTargetException(e, "cannot reduce results from group invocation");
             }
         }
+        // LocalBodyStore.getInstance().setCurrentThreadBody(body);
 
-        //        LocalBodyStore.getInstance().setCurrentThreadBody(body);
         return result;
     }
 
     /**
-     * @param mc
-     * @param individualEffectiveArguments
-     * @return
+     * Add the results (Future) into the typed group result at the correct
+     * poisition.
+     * 
+     * @param memberListOfResultGroup
+     *            the list of the typed group result.
+     * @param result
+     *            the result of a call on member of a Group.
+     * @param resultIndex
+     *            the rank of the result.
+     * @param groupIndex
+     *            TODO
      */
+    public static void addToListOfResult(Vector<Object> memberListOfResultGroup, Object result,
+            int resultIndex, DispatchMonitor dispatchMonitor, int groupIndex) {
+        if (memberListOfResultGroup.get(resultIndex) != null) {
+            throw new ProActiveRuntimeException(
+                "Problem while updating result group: there is already something at index " + resultIndex);
+        }
+        if (result == null) { // could not execute method on a null object
+            System.out.println("############ result is null");
+            memberListOfResultGroup.set(resultIndex, result);
+            return;
+        }
+        if (dispatchMonitor != null) {
+            // in other words, dispatch is dynamic
+            // future
+            if (result instanceof StubObject) {
+                // prevents future updates while processing
+                // (that would result in no dispatcher when future is updated)
+                synchronized (((StubObject) result).getProxy()) {
 
-    //    protected Object[] distributeParameters(MethodCall mc) {
-    //        Object[] individualEffectiveArguments = null;
-    //        individualEffectiveArguments = new Object[mc.getNumberOfParameter()];
-    //        for (int index = 0; index < memberList.size(); index++) {
-    //            for (int i = 0; i < mc.getNumberOfParameter(); i++)
-    //                if (ProActiveGroup.isScatterGroupOn(mc.getParameter(i))) {
-    //                    individualEffectiveArguments[i] = ProActiveGroup.get(mc.getParameter(
-    //                                i),
-    //                            index % ProActiveGroup.size(mc.getParameter(i)));
-    //                } else {
-    //                    individualEffectiveArguments[i] = mc.getParameter(i);
-    //                }
-    //        }
-    //        return individualEffectiveArguments;
-    //    }
-    /**
-     * Add the results (Future) into the typed group result at the correct poisition.
-     * @param memberListOfResultGroup the list of the typed group result.
-     * @param result the result of a call on member of a Group.
-     * @param index the rank of the result.
-     */
-    protected void addToListOfResult(Vector memberListOfResultGroup, Object result, int index) {
-        memberListOfResultGroup.set(index, result);
+                    if (ProActive.isAwaited(result)) {
+                        // System.out.println("result as a future");
+                        ((FutureProxy) ((StubObject) result).getProxy()).setDispatchMonitor(dispatchMonitor);
+                    } else {
+                        // System.out.println("result as a value");
+                        dispatchMonitor.updatedResult(groupIndex);
+                    }
+                }
+            } else if (result instanceof ExceptionInGroup) {
+                if (!(((ExceptionInGroup) result).getObject() instanceof StubObject)) {
+                    throw new ProActiveRuntimeException("mmm. not good!");
+                }
+                dispatchMonitor.updatedResult(((StubObject) ((ExceptionInGroup) result).getObject())
+                        .getProxy());
+            } else {
+                dispatchMonitor.updatedResult(groupIndex);
+                // (standard object)
+            }
+        }
+        memberListOfResultGroup.set(resultIndex, result);
+
     }
 
     /* -------------------- FOR ONEWAY CALL ---------------------- */
 
     /**
      * Launchs the threads for OneWay call of each member of the Group.
-     * @param mc the MethodCall to be applied on each member of the Group.
+     * 
+     * @param mc
+     *            the MethodCall to be applied on each member of the Group.
      */
     protected void oneWayCallOnGroup(MethodCall mc, ExceptionListException exceptionList)
             throws InvocationTargetException {
-        Body body = PAActiveObject.getBodyOnThis();
+        Body body = ProActive.getBodyOnThis();
 
-        // Creating Threads
-        if (isDispatchingCall(mc) == false) {
-            if (uniqueSerialization) {
-                mc.transformEffectiveArgumentsIntoByteArray();
-            }
-            for (int index = 0; index < this.memberList.size(); index++) {
-                this.threadpool.addAJob(new ProcessForOneWayCall(this, this.memberList, index, mc, body,
-                    exceptionList));
-            }
-        } else { // isDispatchingCall == true
-            //            Object[] individualEffectiveArguments = distributeParameters(mc);
-            for (int index = 0; index < memberList.size(); index++) {
-                Object[] individualEffectiveArguments = new Object[mc.getNumberOfParameter()];
-                for (int i = 0; i < mc.getNumberOfParameter(); i++)
-                    if (PAGroup.isScatterGroupOn(mc.getParameter(i))) {
-                        individualEffectiveArguments[i] = PAGroup.get(mc.getParameter(i), index %
-                            PAGroup.size(mc.getParameter(i)));
-                    } else {
-                        individualEffectiveArguments[i] = mc.getParameter(i);
-                    }
-                this.threadpool.addAJob(new ProcessForOneWayCall(this, this.memberList, index,
-                    new MethodCall(mc.getReifiedMethod(), mc.getGenericTypesMapping(),
-                        individualEffectiveArguments, mc.getExceptionContext()), body, exceptionList));
-            }
-        }
-
-        //        LocalBodyStore.getInstance().setCurrentThreadBody(body);
+        List<MethodCall> methodsToDispatch = taskFactory.generateMethodCalls(mc);
+        int nbExpectedCalls = methodsToDispatch.size();
+        CountDownLatch doneSignal = new CountDownLatch(nbExpectedCalls);
+        Queue<AbstractProcessForGroup> tasksToDispatch = taskFactory.generateTasks(mc, methodsToDispatch,
+                null, exceptionList, doneSignal, this);
+        dispatcher.dispatchTasks(tasksToDispatch, doneSignal, mc.getReifiedMethod().getAnnotation(
+                Dispatch.class));
+        // LocalBodyStore.getInstance().setCurrentThreadBody(body);
     }
 
     /* ------------------- java.util.List methods------------------ */
 
     /**
-     * If o is a reified object and if it is "assignableFrom" the class of the group, add it into the group<br>
-     *  - if o is a group merge it into the group<br>
-     *  - if o is not a reified object nor a group : do nothing<br>
-     * @param o - element whose presence in this group is to be ensured
-     * @return <code>true</code> if this collection changed as a result of the call
+     * If o is a reified object and if it is "assignableFrom" the class of the
+     * group, add it into the group<br> - if o is a group merge it into the
+     * group<br> - if o is not a reified object nor a group : do nothing<br>
+     * 
+     * @param o -
+     *            element whose presence in this group is to be ensured
+     * @return <code>true</code> if this collection changed as a result of the
+     *         call
      */
     public boolean add(Object o) {
         try {
             if ((MOP.forName(this.className)).isAssignableFrom(o.getClass())) {
 
-                /* if o is an reified object and if it is "assignableFrom" the class of the group, ... add it into the group */
+                /*
+                 * if o is an reified object and if it is "assignableFrom" the
+                 * class of the group, ... add it into the group
+                 */
                 if (MOP.isReifiedObject(o)) {
                     return this.memberList.add(o);
                 }
                 // COMPONENTS
 
-                /* if o is a reference on a component interface*/
+                /* if o is a reference on a component interface */
                 else if (o instanceof ProActiveInterface) {
                     return this.memberList.add(o);
                 } /* if o is a Group */else if (o instanceof org.objectweb.proactive.core.group.ProxyForGroup) {
@@ -481,8 +570,11 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
 
     /**
      * Adds all of the elements in the specified Collection to this Group.
-     * @param c - the elements to be inserted into this Group.
-     * @return <code>true</code> if this collection changed as a result of the call.
+     * 
+     * @param c -
+     *            the elements to be inserted into this Group.
+     * @return <code>true</code> if this collection changed as a result of the
+     *         call.
      */
     public boolean addAll(Collection c) {
         boolean modified = false;
@@ -494,25 +586,32 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
     }
 
     /**
-     * Removes all of the elements from this group.
-     * This group will be empty after this method returns.
+     * Removes all of the elements from this group. This group will be empty
+     * after this method returns.
      */
     public void clear() {
         this.memberList.clear();
     }
 
     /**
-     * This method returns true if and only if this group contains at least one element e such that <code>o.equals(e)</code>
-     * @return <code>true</code> if this collection contains the specified element.
+     * This method returns true if and only if this group contains at least one
+     * element e such that <code>o.equals(e)</code>
+     * 
+     * @return <code>true</code> if this collection contains the specified
+     *         element.
      */
     public boolean contains(Object o) {
         return this.memberList.contains(o);
     }
 
     /**
-     * Checks if this Group contains all of the elements in the specified collection.
-     * @param c - the collection to be checked for containment in this Group.
-     * @return <code>true</code> if this Group contains all of the elements in the specified collection
+     * Checks if this Group contains all of the elements in the specified
+     * collection.
+     * 
+     * @param c -
+     *            the collection to be checked for containment in this Group.
+     * @return <code>true</code> if this Group contains all of the elements in
+     *         the specified collection
      */
     public boolean containsAll(Collection c) {
         boolean contained;
@@ -527,22 +626,25 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
     }
 
     /**
-     * Compares the specified object with this group for equality.
-     * Returns <code>true</code> if and only if the specified Object <code>o</code>
-     * is also a <code>Group</code>, both <code>Group</code>s have the same size,
-     * and all corresponding pairs of elements in the two <code>Group</code>s are equal.
-     * (Two elements e1 and e2 are equal if (<code>e1==null ? e2==null : e1.equals(e2)</code>).
-     * In other words, two <code>Group</code>s are defined to be equal if they contain the
-     * same elements in the same order.
-     * @param o the Object for wich we test the equality.
-     * @return <code>true</code> if <code>o</code> is the same Group as <code>this</code>.
+     * Compares the specified object with this group for equality. Returns
+     * <code>true</code> if and only if the specified Object <code>o</code>
+     * is also a <code>Group</code>, both <code>Group</code>s have the
+     * same size, and all corresponding pairs of elements in the two
+     * <code>Group</code>s are equal. (Two elements e1 and e2 are equal if (<code>e1==null ? e2==null : e1.equals(e2)</code>).
+     * In other words, two <code>Group</code>s are defined to be equal if
+     * they contain the same elements in the same order.
+     * 
+     * @param o
+     *            the Object for wich we test the equality.
+     * @return <code>true</code> if <code>o</code> is the same Group as
+     *         <code>this</code>.
      */
     @Override
     public boolean equals(Object o) {
-        ProxyForGroup p = PAGroup.findProxyForGroup(o);
+        ProxyForGroup p = ProActiveGroup.findProxyForGroup(o);
         if (p != null) {
             // comparing with another group
-            return this.memberList.equals((p).memberList);
+            return this.memberList.equals(((org.objectweb.proactive.core.group.ProxyForGroup) p).memberList);
         } else {
             return false;
         }
@@ -550,6 +652,7 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
 
     /**
      * Returns the hash code value for this Group.
+     * 
      * @return the hash code value for this Group.
      */
     @Override
@@ -559,6 +662,7 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
 
     /**
      * Check if the group is empty.
+     * 
      * @return <code>true</code> if this collection contains no elements.
      */
     public boolean isEmpty() {
@@ -567,6 +671,7 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
 
     /**
      * Returns an Iterator of the member in the Group.
+     * 
      * @return an Iterator of the member in the Group.
      */
     public Iterator iterator() {
@@ -574,9 +679,12 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
     }
 
     /**
-     * Removes a single instance of the specified element from this Group, if it is present.
-     * It removes the first occurence e where <code>o.equals(e)</code> returns <code>true</code>.
-     * @param o the element to be removed from this Group (if present).
+     * Removes a single instance of the specified element from this Group, if it
+     * is present. It removes the first occurence e where
+     * <code>o.equals(e)</code> returns <code>true</code>.
+     * 
+     * @param o
+     *            the element to be removed from this Group (if present).
      * @return <code>true> if the Group contained the specified element.
      */
     public boolean remove(Object o) {
@@ -584,9 +692,12 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
     }
 
     /**
-     * Removes all this Group's elements that are also contained in the specified collection.
-     * After this call returns, this collection will contain no elements in common with the specified collection.
-     * @param c - elements to be removed from this Group.
+     * Removes all this Group's elements that are also contained in the
+     * specified collection. After this call returns, this collection will
+     * contain no elements in common with the specified collection.
+     * 
+     * @param c -
+     *            elements to be removed from this Group.
      * @return <code>true</code> if this Group changed as a result of the call
      */
     public boolean removeAll(Collection c) {
@@ -599,10 +710,14 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
     }
 
     /**
-     * Retains only the elements in this Group that are contained in the specified collection.
-     * It removes from this Group all of its elements that are not contained in the specified collection.
-     * @param c - elements to be retained in this Group.
-     * @return <code>true</code> if this Group changed as a result of the call.
+     * Retains only the elements in this Group that are contained in the
+     * specified collection. It removes from this Group all of its elements that
+     * are not contained in the specified collection.
+     * 
+     * @param c -
+     *            elements to be retained in this Group.
+     * @return <code>true</code> if this Group changed as a result of the
+     *         call.
      */
     public boolean retainAll(Collection c) {
         boolean modified = false;
@@ -618,6 +733,7 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
 
     /**
      * Returns the number of member in this Group.
+     * 
      * @return the number of member in this Group.
      */
     public int size() {
@@ -625,18 +741,24 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
     }
 
     /**
-     * Returns an array containing all of the elements in this Group in the correct order.
-     * @return an array containing all of the elements in this Group in the correct order.
+     * Returns an array containing all of the elements in this Group in the
+     * correct order.
+     * 
+     * @return an array containing all of the elements in this Group in the
+     *         correct order.
      */
     public Object[] toArray() {
         return this.memberList.toArray();
     }
 
     /**
-     * Returns an array containing all of the elements in this collection;
-     * the runtime type of the returned array is that of the specified array.
-     * @param a - the array into which the elements of this collection are to be stored, if it is big enough;
-     * otherwise, a new array of the same runtime type is allocated for this purpose.
+     * Returns an array containing all of the elements in this collection; the
+     * runtime type of the returned array is that of the specified array.
+     * 
+     * @param a -
+     *            the array into which the elements of this collection are to be
+     *            stored, if it is big enough; otherwise, a new array of the
+     *            same runtime type is allocated for this purpose.
      * @return an array containing the elements of this collection.
      */
     public Object[] toArray(Object[] a) {
@@ -646,24 +768,31 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
     /* ---------------------- THE GROUP'S METHOD ------------------- */
 
     /**
-     *  Add all member of the group <code>ogroup</code> into the Group. <code>ogroup</code> can be :<br>
-     * - a typed group<br>
-     * - a Group<br>
-     * - a standard Object<br>
+     * Add all member of the group <code>ogroup</code> into the Group.
+     * <code>ogroup</code> can be :<br> - a typed group<br> - a Group<br> -
+     * a standard Object<br>
      * but it have to be (or to extend) the Class of the Group.
-     * @param oGroup the object(s) to merge into the Group.
+     * 
+     * @param oGroup
+     *            the object(s) to merge into the Group.
      */
     public void addMerge(Object oGroup) {
         try {
 
-            /* check oGroup is an Reified Object and if it is "assignableFrom" the class of the group */
+            /*
+             * check oGroup is an Reified Object and if it is "assignableFrom"
+             * the class of the group
+             */
             if ((MOP.isReifiedObject(oGroup)) &&
                 ((MOP.forName(this.className)).isAssignableFrom(oGroup.getClass()))) {
 
                 /* check oGroup is an object representing a group */
                 if (((StubObject) oGroup).getProxy() instanceof org.objectweb.proactive.core.group.ProxyForGroup) {
                     memberList.addAll(((ProxyForGroup) ((StubObject) oGroup).getProxy()).memberList);
-                } /* if oGroup is a Standard Active Object (but not a group), just add it */else {
+                } /*
+                 * if oGroup is a Standard Active Object (but not a group),
+                 * just add it
+                 */else {
                     this.add(oGroup);
                 }
             } /* if oGroup is a Group */else if (oGroup instanceof org.objectweb.proactive.core.group.ProxyForGroup) {
@@ -677,17 +806,22 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
     }
 
     /**
-     * Returns the index of the first occurence of the specified Object <code>obj</code>.
-     * @param obj - the obj tahat is searched in the Group.
-     * @return the rank of <code>obj</code> in the Group.
-     * -1 if the list does not contain this object.
+     * Returns the index of the first occurence of the specified Object
+     * <code>obj</code>.
+     * 
+     * @param obj -
+     *            the obj tahat is searched in the Group.
+     * @return the rank of <code>obj</code> in the Group. -1 if the list does
+     *         not contain this object.
      */
     public int indexOf(Object obj) {
         return this.memberList.indexOf(obj);
     }
 
     /**
-     * Returns a list iterator of the members in this Group (in proper sequence).
+     * Returns a list iterator of the members in this Group (in proper
+     * sequence).
+     * 
      * @return a list iterator of the members in this Group.
      */
     public ListIterator listIterator() {
@@ -696,7 +830,9 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
 
     /**
      * Removes the element at the specified position.
-     * @param index the rank of the object to remove in the Group.
+     * 
+     * @param index
+     *            the rank of the object to remove in the Group.
      * @return the object that has been removed
      */
     public Object remove(int index) {
@@ -706,7 +842,7 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
             String key = (String) it.next();
             Integer value = (Integer) elementNames.get(key);
             if (value.intValue() > index) {
-                elementNames.put(key, new Integer(value.intValue() - 1));
+                elementNames.put(key, Integer.valueOf(value.intValue() - 1));
             }
         }
         return this.memberList.remove(index);
@@ -714,7 +850,9 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
 
     /**
      * Returns the i-th member of the group.
-     * @param i - the rank of the object to return.
+     * 
+     * @param i -
+     *            the rank of the object to return.
      * @return the member of the Group at the specified rank.
      */
     public Object get(int i) {
@@ -723,16 +861,19 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
 
     /**
      * Returns the ("higher") Class of group's member.
+     * 
      * @return the Class that all Group's members are (or extend).
-     * @throws java.lang.ClassNotFoundException if the class name of the Group is not known.
+     * @throws java.lang.ClassNotFoundException
+     *             if the class name of the Group is not known.
      */
-    public Class<?> getType() throws java.lang.ClassNotFoundException {
+    public Class getType() throws java.lang.ClassNotFoundException {
         return MOP.forName(this.className);
     }
 
     /**
-     * Returns the full name of ("higher") Class<?> of group's member
-     * @return the name of the Class<?> that all Group's members are (or extend).
+     * Returns the full name of ("higher") Class of group's member
+     * 
+     * @return the name of the Class that all Group's members are (or extend).
      */
     public String getTypeName() {
         return this.className;
@@ -740,7 +881,9 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
 
     /**
      * Returns an Object (a <b>typed group</b> Object) representing the Group
-     * @return a typed group corresponding to the Group, <code>null</code> if an exception occured
+     * 
+     * @return a typed group corresponding to the Group, <code>null</code> if
+     *         an exception occured
      */
     public Object getGroupByType() {
         Object result;
@@ -758,19 +901,26 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
         return result;
     }
 
-    //  This is the best thing to do, but createStubObject has a private acces !!!! :
-    //    // Instanciates the stub object
-    //    StubObject stub = MOP.createStubObject(this.className, MOP.forName(this.className));
-    //    // Connects the proxy to the stub
-    //    stub.setProxy(this);
-    //    return stub;
-    //  }
-    //  An other way is to "store" the stub and return it when asked
+    // This is the best thing to do, but createStubObject has a private acces
+    // !!!! :
+    // // Instanciates the stub object
+    // StubObject stub = MOP.createStubObject(this.className,
+    // MOP.forName(this.className));
+    // // Connects the proxy to the stub
+    // stub.setProxy(this);
+    // return stub;
+    // }
+    // An other way is to "store" the stub and return it when asked
 
     /**
-     * Creates a new group with all members of the group and all the members of the group <code>g</code>
-     * @param g - a group
-     * @return a group that contain all the members of the group and <code>g</code>. <code>null<code> if the class of the group is incompatible.
+     * Creates a new group with all members of the group and all the members of
+     * the group <code>g</code>
+     * 
+     * @param g -
+     *            a group
+     * @return a group that contain all the members of the group and
+     *         <code>g</code>.
+     *         <code>null<code> if the class of the group is incompatible.
      */
     public Group union(Group g) {
         try {
@@ -796,14 +946,20 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
             e.printStackTrace();
         }
 
-        // the group are incompatible (i.e. they have not members of the the same class)
+        // the group are incompatible (i.e. they have not members of the the
+        // same class)
         return null;
     }
 
     /**
-     * Creates a new group with all members that belong to the group and to the group <code>g</code>.
-     * @param g - a group
-     * @return a group that contain the common members of the group and <code>g</code>. <code>null<code> if the class of the group is incompatible.
+     * Creates a new group with all members that belong to the group and to the
+     * group <code>g</code>.
+     * 
+     * @param g -
+     *            a group
+     * @return a group that contain the common members of the group and
+     *         <code>g</code>.
+     *         <code>null<code> if the class of the group is incompatible.
      */
     public Group intersection(Group g) {
         try {
@@ -827,14 +983,20 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
             e.printStackTrace();
         }
 
-        // the group are incompatible (i.e. they have not members of the the same class)
+        // the group are incompatible (i.e. they have not members of the the
+        // same class)
         return null;
     }
 
     /**
-     * Creates a new group with the members that belong to the group, but not to the group <code>g</code>.
-     * @param g - a group
-     * @return a group that contain the members of the group without the member <code>g</code>. <code>null<code> if the class of the group is incompatible.
+     * Creates a new group with the members that belong to the group, but not to
+     * the group <code>g</code>.
+     * 
+     * @param g -
+     *            a group
+     * @return a group that contain the members of the group without the member
+     *         <code>g</code>.
+     *         <code>null<code> if the class of the group is incompatible.
      */
     public Group exclude(Group g) {
         try {
@@ -856,14 +1018,20 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
             e.printStackTrace();
         }
 
-        // the group are incompatible (i.e. they have not members of the the same class)
+        // the group are incompatible (i.e. they have not members of the the
+        // same class)
         return null;
     }
 
     /**
-     * Creates a new group with all members that belong to the group or to the group <code>g</code>, but not to both.
-     * @param g - a group
-     * @return a group that contain the non-common members of the group and <code>g</code>. <code>null<code> if the class of the group is incompatible.
+     * Creates a new group with all members that belong to the group or to the
+     * group <code>g</code>, but not to both.
+     * 
+     * @param g -
+     *            a group
+     * @return a group that contain the non-common members of the group and
+     *         <code>g</code>.
+     *         <code>null<code> if the class of the group is incompatible.
      */
     public Group difference(Group g) {
         try {
@@ -895,15 +1063,22 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
             e.printStackTrace();
         }
 
-        // the group are incompatible (i.e. they have not members of the the same class)
+        // the group are incompatible (i.e. they have not members of the the
+        // same class)
         return null;
     }
 
     /**
-     * Creates a new group with the members of the group begining at the index <code>begin</code> and ending at the index <code>end</code>.
-     * @param begin - the begining index
-     * @param end - the ending index
-     * @return a group that contain the members of the group from <code>begin</code> to <code>end</code>. <code>null</code> if <code>begin > end</code>.
+     * Creates a new group with the members of the group begining at the index
+     * <code>begin</code> and ending at the index <code>end</code>.
+     * 
+     * @param begin -
+     *            the begining index
+     * @param end -
+     *            the ending index
+     * @return a group that contain the members of the group from
+     *         <code>begin</code> to <code>end</code>. <code>null</code>
+     *         if <code>begin > end</code>.
      */
     public Group range(int begin, int end) {
         // bag arguments => return null
@@ -930,7 +1105,9 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
 
     /**
      * Communicates the SPMD Group to members
-     * @param spmdGroup - the SPMD group
+     * 
+     * @param spmdGroup -
+     *            the SPMD group
      */
     public void setSPMDGroup(Object spmdGroup) {
         try {
@@ -938,11 +1115,14 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
         } catch (InvocationTargetException e) {
             logger.info("Unable to set the SPMD group");
             e.printStackTrace();
+        } catch (Exception e) {
+            e.printStackTrace();
         }
     }
 
     /**
-     * To debug, display the size of the Group and all its members with there position
+     * To debug, display the size of the Group and all its members with there
+     * position
      */
     public void display() {
         logger.info("Number of member : " + memberList.size());
@@ -956,27 +1136,31 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
      * Waits for all members are arrived.
      */
     public void waitAll() {
-        PAFuture.waitForAll(this.memberList);
+        ProActive.waitForAll(this.memberList);
     }
 
     /**
      * Waits for at least one member is arrived.
      */
     public void waitOne() {
-        PAFuture.waitForAny(this.memberList);
+        ProActive.waitForAny(this.memberList);
     }
 
     /**
      * Waits for the member at the specified rank is arrived.
-     * @param n - the rank of the awaited member.
+     * 
+     * @param n -
+     *            the rank of the awaited member.
      */
     public void waitTheNth(int n) {
-        PAFuture.waitFor(this.memberList.get(n));
+        ProActive.waitFor(this.memberList.get(n));
     }
 
     /**
      * Waits for at least <code>n</code> members are arrived.
-     * @param n - the number of awaited members.
+     * 
+     * @param n -
+     *            the number of awaited members.
      */
     public void waitN(int n) {
         for (int i = 0; i < n; i++) {
@@ -986,38 +1170,46 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
 
     /**
      * Waits for at least one member is arrived and returns it.
+     * 
      * @return a non-awaited member of the Group.
      */
     public Object waitAndGetOne() {
-        return this.memberList.get(PAFuture.waitForAny(this.memberList));
+        return this.memberList.get(ProActive.waitForAny(this.memberList));
     }
 
     /**
-     * Waits for one future is arrived and returns it (removes it from the group).
-     * @return a member of <code>o</code>. (<code>o</code> is removed from the group)
+     * Waits for one future is arrived and returns it (removes it from the
+     * group).
+     * 
+     * @return a member of <code>o</code>. (<code>o</code> is removed from
+     *         the group)
      */
     public Object waitAndGetOneThenRemoveIt() {
-        return this.memberList.remove(PAFuture.waitForAny(this.memberList));
+        return this.memberList.remove(ProActive.waitForAny(this.memberList));
     }
 
     /**
      * Waits for the member at the specified rank is arrived and returns it.
-     * @param n - the rank of the wanted member.
-     * @return the member (non-awaited) at the rank <code>n</code> in the Group.
+     * 
+     * @param n -
+     *            the rank of the wanted member.
+     * @return the member (non-awaited) at the rank <code>n</code> in the
+     *         Group.
      */
     public Object waitAndGetTheNth(int n) {
-        PAFuture.waitForTheNth(this.memberList, n);
+        ProActive.waitForTheNth(this.memberList, n);
         return this.memberList.get(n);
     }
 
     /**
      * Waits for at least one member is arrived and returns its index.
+     * 
      * @return the index of a non-awaited member of the Group.
      */
     public int waitOneAndGetIndex() {
         int index = 0;
-        this.memberList.get(PAFuture.waitForAny(this.memberList));
-        while (PAFuture.isAwaited(this.memberList.get(index))) {
+        this.memberList.get(ProActive.waitForAny(this.memberList));
+        while (ProActive.isAwaited(this.memberList.get(index))) {
             index++;
         }
         return index;
@@ -1025,11 +1217,12 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
 
     /**
      * Checks if all the members of the Group are awaited.
+     * 
      * @return <code>true</code> if all the members of the Group are awaited.
      */
     public boolean allAwaited() {
         for (int i = 0; i < this.memberList.size(); i++)
-            if (!(PAFuture.isAwaited(this.memberList.get(i)))) {
+            if (!(ProActive.isAwaited(this.memberList.get(i)))) {
                 return false;
             }
         return true;
@@ -1037,19 +1230,21 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
 
     /**
      * Checks if all the members of the Group are arrived.
+     * 
      * @return <code>true</code> if all the members of the Group are arrived.
      */
     public boolean allArrived() {
         for (int i = 0; i < this.memberList.size(); i++)
-            if (PAFuture.isAwaited(this.memberList.get(i))) {
+            if (ProActive.isAwaited(this.memberList.get(i))) {
                 return false;
             }
         return true;
     }
 
     /**
-     * Returns an ExceptionListException containing all the throwables (exceptions and errors) occured
-     * when this group was built
+     * Returns an ExceptionListException containing all the throwables
+     * (exceptions and errors) occured when this group was built
+     * 
      * @return an ExceptionListException
      */
     public ExceptionListException getExceptionList() {
@@ -1064,14 +1259,14 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
 
     /**
      * Removes all exceptions and null references contained in the Group.
-     * Exceptions (and null references) appears with communication/program-level/runtime errors
-     * and are stored in the Group.
+     * Exceptions (and null references) appears with
+     * communication/program-level/runtime errors and are stored in the Group.
      * (After this operation the size of the Group decreases)
      */
     public void purgeExceptionAndNull() {
         Iterator it = this.memberList.iterator();
         while (it.hasNext()) {
-            Object element = it.next();
+            Object element = (Object) it.next();
             if ((element instanceof Throwable) || (element == null)) {
                 it.remove();
             }
@@ -1080,58 +1275,81 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
 
     /**
      * Modifies the number of members served by one thread
-     * @param i - the new ratio
+     * 
+     * @param i -
+     *            the new ratio
      */
     public void setRatioMemberToThread(int i) {
-        this.threadpool.ratio(i);
+        // this.threadpool.ratio(i);
+        // TODO_M replace this method
     }
 
-    /**
-     * Modifies the number of additional threads to serve members
-     * @param i - the new number
+    /*
+     * ---------------------- METHOD FOR SYNCHRONOUS CREATION OF A TYPED GROUP
+     * ----------------------
      */
-    public void setAdditionalThread(int i) {
-        this.threadpool.thread(i);
-    }
-
-    /* ---------------------- METHOD FOR SYNCHRONOUS CREATION OF A TYPED GROUP ---------------------- */
 
     /**
      * Builds the members using the threads (of the threadpool).
-     * @param className - the name of the Class<?> of the members.
-     * @param params - an array that contains the parameters for the constructor of member.
-     * @param nodeList - the nodes where the member will be created.
+     * 
+     * @param className -
+     *            the name of the Class of the members.
+     * @param params -
+     *            an array that contains the parameters for the constructor of
+     *            member.
+     * @param nodeList -
+     *            the nodes where the member will be created.
      */
-    public void createMemberWithMultithread(String className, Class<?>[] genericParameters,
-            Object[][] params, Node[] nodeList) {
+    public void createMemberWithMultithread(String className, Class[] genericParameters, Object[][] params,
+            Node[] nodeList) {
         // Initializes the Group to the correct size
         for (int i = 0; i < params.length; i++) {
             this.memberList.add(null);
         }
+        CountDownLatch doneSignal = new CountDownLatch(params.length);
+        Queue<AbstractProcessForGroup> tasksToDispatch = new LinkedList<AbstractProcessForGroup>();
         for (int i = 0; i < params.length; i++) {
-            this.threadpool.addAJob(new ProcessForGroupCreation(this, className, genericParameters,
-                params[i], nodeList[i % nodeList.length], i));
+            tasksToDispatch.add(new ProcessForGroupCreation(this, className, genericParameters, params[i],
+                nodeList[i % nodeList.length], i, doneSignal));
         }
-        this.threadpool.complete();
+        dispatcher.dispatchTasks(tasksToDispatch, doneSignal, null);
+        try {
+            doneSignal.await();
+        } catch (InterruptedException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+        }
     }
 
     /**
      * Builds the members using the threads (of the threadpool).
-     * @param className - the name of the Class<?> of the members.
-     * @param params - the parameters for the constructor of members.
-     * @param nodeList - the nodes where the member will be created.
+     * 
+     * @param className -
+     *            the name of the Class of the members.
+     * @param params -
+     *            the parameters for the constructor of members.
+     * @param nodeList -
+     *            the nodes where the member will be created.
      */
-    public void createMemberWithMultithread(String className, Class<?>[] genericParameters, Object[] params,
+    public void createMemberWithMultithread(String className, Class[] genericParameters, Object[] params,
             Node[] nodeList) {
         // Initializes the Group to the correct size
         for (int i = 0; i < nodeList.length; i++) {
             this.memberList.add(null);
         }
+        CountDownLatch doneSignal = new CountDownLatch(nodeList.length);
+        Queue<AbstractProcessForGroup> tasksToDispatch = new LinkedList<AbstractProcessForGroup>();
         for (int i = 0; i < nodeList.length; i++) {
-            this.threadpool.addAJob(new ProcessForGroupCreation(this, className, genericParameters, params,
-                nodeList[i], i));
+            tasksToDispatch.add(new ProcessForGroupCreation(this, className, genericParameters, params,
+                nodeList[i], i, doneSignal));
         }
-        this.threadpool.complete();
+        dispatcher.dispatchTasks(tasksToDispatch, doneSignal, null);
+        try {
+            doneSignal.await();
+        } catch (InterruptedException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+        }
     }
 
     /*
@@ -1176,7 +1394,10 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
         return memberList.subList(fromIndex, toIndex);
     }
 
-    /* ------------------------ PRIVATE METHODS FOR SERIALIZATION --------------------- */
+    /*
+     * ------------------------ PRIVATE METHODS FOR SERIALIZATION
+     * ---------------------
+     */
     private void writeObject(java.io.ObjectOutputStream out) throws java.io.IOException {
         // this.threadpool.finalize();
         out.defaultWriteObject();
@@ -1185,86 +1406,124 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
     private void readObject(java.io.ObjectInputStream in) throws java.io.IOException, ClassNotFoundException {
         in.defaultReadObject();
         this.proxyForGroupID = new UniqueID();
-        this.threadpool = new ThreadPool();
+        dispatcher = new Dispatcher(this, false, bufferSize);
+        taskFactory = TaskFactoryFactory.getTaskFactory(this);
     }
 
-    //Map class style method
+    // Map class style method
 
     /**
-     * Returns <code>true</code> if this Group contains a mapping for the specified key.
-     * More formally, returns <code>true</code> if and only if this Group contains at
-     * a mapping for a key <code>k</code> such that <code>(key==null ? k==null : key.equals(k))</code>.
-     * (There can be at most one such mapping.)
-     * @param key - key whose presence in this Group is to be tested.
-     * @return <code>true</code> if this Group contains a mapping for the specified key.
-     * @throws ClassCastException - if the key is of an inappropriate type for this Group (optional).
-     * @throws NullPointerException - if the key is null and this Group does not not permit null keys (optional).
+     * Returns <code>true</code> if this Group contains a mapping for the
+     * specified key. More formally, returns <code>true</code> if and only if
+     * this Group contains at a mapping for a key <code>k</code> such that
+     * <code>(key==null ? k==null : key.equals(k))</code>. (There can be at
+     * most one such mapping.)
+     * 
+     * @param key -
+     *            key whose presence in this Group is to be tested.
+     * @return <code>true</code> if this Group contains a mapping for the
+     *         specified key.
+     * @throws ClassCastException -
+     *             if the key is of an inappropriate type for this Group
+     *             (optional).
+     * @throws NullPointerException -
+     *             if the key is null and this Group does not not permit null
+     *             keys (optional).
      */
     public boolean containsKey(String key) {
         return this.elementNames.containsKey(key);
     }
 
     /**
-     * Returns <code>true</code> if this Group maps one or more keys to the specified value.
-     * More formally, returns <code>true</code> if and only if this Group contains at least
-     * one mapping to a value <code>v</code> such that <code>(value==null ? v==null : value.equals(v))</code>.
-     * @param value - value whose presence in this map is to be tested.
-     * @return <code>true</code> if this Group maps one or more keys to the specified value.
-     * @throws ClassCastException - if the value is of an inappropriate type for this Collection (optional).
-     * @throws NullPointerException - if the value is null and this Group does not not permit null values (optional).
+     * Returns <code>true</code> if this Group maps one or more keys to the
+     * specified value. More formally, returns <code>true</code> if and only
+     * if this Group contains at least one mapping to a value <code>v</code>
+     * such that <code>(value==null ? v==null : value.equals(v))</code>.
+     * 
+     * @param value -
+     *            value whose presence in this map is to be tested.
+     * @return <code>true</code> if this Group maps one or more keys to the
+     *         specified value.
+     * @throws ClassCastException -
+     *             if the value is of an inappropriate type for this Collection
+     *             (optional).
+     * @throws NullPointerException -
+     *             if the value is null and this Group does not not permit null
+     *             values (optional).
      */
     public boolean containsValue(Object value) {
         return this.memberList.contains(value);
     }
 
     /**
-     * Returns the Object to which this Group maps the specified key.
-     * Returns <code>null</code> if the Collection contains no mapping for this key.
-     * A return value of <code>null</code> does not necessarily indicate that the Collection
-     * contains no mapping for the key; it's also possible that the Group explicitly maps the key to null.
-     * The containsKey operation may be used to distinguish these two cases.
-     * More formally, if this Group contains a mapping from a key <code>k</code> to a value
-     * <code>v</code> such that <code>(key==null ? k==null : key.equals(k))</code>,
-     * then this method returns <code>v</code>; otherwise it returns <code>null</code>.
-     * (There can be at most one such mapping.)
-     * @param key - key whose associated value is to be returned.
-     * @return the value to which this map maps the specified key, or <code>null</code> if the map contains no mapping for this key.
-     * @throws ClassCastException - if the key is of an inappropriate type for this Group (optional).
-     * @throws NullPointerException - key is <code>null</code> and this Group does not not permit null keys (optional).
+     * Returns the Object to which this Group maps the specified key. Returns
+     * <code>null</code> if the Collection contains no mapping for this key. A
+     * return value of <code>null</code> does not necessarily indicate that
+     * the Collection contains no mapping for the key; it's also possible that
+     * the Group explicitly maps the key to null. The containsKey operation may
+     * be used to distinguish these two cases. More formally, if this Group
+     * contains a mapping from a key <code>k</code> to a value <code>v</code>
+     * such that <code>(key==null ? k==null : key.equals(k))</code>, then
+     * this method returns <code>v</code>; otherwise it returns
+     * <code>null</code>. (There can be at most one such mapping.)
+     * 
+     * @param key -
+     *            key whose associated value is to be returned.
+     * @return the value to which this map maps the specified key, or
+     *         <code>null</code> if the map contains no mapping for this key.
+     * @throws ClassCastException -
+     *             if the key is of an inappropriate type for this Group
+     *             (optional).
+     * @throws NullPointerException -
+     *             key is <code>null</code> and this Group does not not permit
+     *             null keys (optional).
      */
     public synchronized Object getNamedElement(String key) {
         return get(((Integer) this.elementNames.get(key)).intValue());
     }
 
     /**
-     * Associates the specified value with the specified key in this Group (optional operation).
-     * If the Group previously contained a mapping for this key, the old value is replaced by
-     * the specified value. (A map <code>m</code> is said to contain a mapping for a key
-     * <code>k</code> if and only if <code>m.containsKey(k)</code> would return <code>true</code>.))
-     * In that case, the old value is also removed from the group.
-     * @param key - key with which the specified value is to be associated.
-     * @param value - value to be associated with the specified key.
-     * @throws UnsupportedOperationException - if the put operation is not supported by this Group.
-     * @throws ClassCastException - if the class of the specified key or value prevents it from being stored in this Group.
-     * @throws IllegalArgumentException - if some aspect of this key or value prevents it from being stored in this Group.
-     * @throws NullPointerException - this map does not permit null keys or values, and the specified key or value is <code>null</code>.
+     * Associates the specified value with the specified key in this Group
+     * (optional operation). If the Group previously contained a mapping for
+     * this key, the old value is replaced by the specified value. (A map
+     * <code>m</code> is said to contain a mapping for a key <code>k</code>
+     * if and only if <code>m.containsKey(k)</code> would return
+     * <code>true</code>.)) In that case, the old value is also removed from
+     * the group.
+     * 
+     * @param key -
+     *            key with which the specified value is to be associated.
+     * @param value -
+     *            value to be associated with the specified key.
+     * @throws UnsupportedOperationException -
+     *             if the put operation is not supported by this Group.
+     * @throws ClassCastException -
+     *             if the class of the specified key or value prevents it from
+     *             being stored in this Group.
+     * @throws IllegalArgumentException -
+     *             if some aspect of this key or value prevents it from being
+     *             stored in this Group.
+     * @throws NullPointerException -
+     *             this map does not permit null keys or values, and the
+     *             specified key or value is <code>null</code>.
      */
     public synchronized void addNamedElement(String key, Object value) {
         if (elementNames.containsKey(key)) {
             removeNamedElement(key);
         }
-        this.elementNames.put(key, new Integer(this.size()));
+        this.elementNames.put(key, Integer.valueOf(this.size()));
         this.add(value);
     }
 
     /**
-     *        Returns a set view of the keys contained in this Group.
-     * The set is backed by the Group, so changes to the Group are reflected in the set,
-     * and vice-versa. If the Group is modified while an iteration over the set is in progress,
-     * the results of the iteration are undefined. The set supports element removal,
-     * which removes the corresponding mapping from the Group, via the Iterator.remove,
-     * Set.remove, removeAll retainAll, and clear operations.
-     * It does not support the add or addAll operations.
+     * Returns a set view of the keys contained in this Group. The set is backed
+     * by the Group, so changes to the Group are reflected in the set, and
+     * vice-versa. If the Group is modified while an iteration over the set is
+     * in progress, the results of the iteration are undefined. The set supports
+     * element removal, which removes the corresponding mapping from the Group,
+     * via the Iterator.remove, Set.remove, removeAll retainAll, and clear
+     * operations. It does not support the add or addAll operations.
+     * 
      * @return a set view of the keys contained in this Group.
      */
     public Set keySet() {
@@ -1273,7 +1532,9 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
 
     /**
      * Removes the named element of the group. It also returns this element.
-     * @param key the name of the element
+     * 
+     * @param key
+     *            the name of the element
      * @return the removed element
      */
     public synchronized Object removeNamedElement(String key) {
@@ -1303,10 +1564,15 @@ public class ProxyForGroup extends AbstractProxy implements Proxy, Group, java.i
     }
 
     /**
-     * @param className The className to set.
+     * @param className
+     *            The className to set.
      */
     public void setClassName(String className) {
         this.className = className;
+    }
+
+    public DispatchMode balancing() {
+        return dispatchMode;
     }
 
     public void setStub(StubObject stub) {
